fix tint row wrapping issue

--- a/src/styles/components/mm/components/_audience.scss
+++ b/src/styles/components/mm/components/_audience.scss
@@ -544,12 +544,12 @@
             text-align:center;
         }
         a{
-            margin-bottom:0.9375rem;    
+            margin-bottom:1rem;    
         }
     }
     &__photos{
-            padding:0.9375rem 0;
-            margin:-0.375rem;
+            padding:1rem 0;
+            margin:-0.5rem;
     }
   }
   &__twitter{
